<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFCBFB"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnToggleLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2D3142"
        android:text="@string/toggle_language"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnExt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2D3142"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/dark_background"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/enter_your_password"
        android:maxLength="99"
        android:paddingHorizontal="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutResult"
        app:layout_constraintTop_toTopOf="@id/guideline"
        tools:ignore="Autofill,TextFields" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/dark_background"
        app:layout_constraintTop_toBottomOf="@id/etPassword">

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/password_status"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="ธนวัฒน์ ศรีลาคำ 6604101332"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStatus"
            tools:text="ธนวัฒน์ ศรีลาคำ 6604101332" />


        <FrameLayout
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvLength"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/hasLowerCase" />

        <TextView
            android:id="@+id/hasLowerCase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/haslowercase"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_error"
            app:layout_constraintStart_toEndOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/tvResult" />

        <TextView
            android:id="@+id/hasUpperCase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/hasuppercase"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_error"
            app:layout_constraintStart_toEndOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/hasLowerCase" />

        <TextView
            android:id="@+id/hasSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/hassymbol"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_error"
            app:layout_constraintStart_toEndOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/hasUpperCase" />

        <TextView
            android:id="@+id/tvLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/montserrat_bold"
            android:maxLength="2"
            android:text="@string/_00"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/hasSymbol" />

        <TextView
            android:id="@+id/Length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="11dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/length"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tvLength"
            app:layout_constraintStart_toEndOf="@id/tvLength"
            app:layout_constraintTop_toBottomOf="@id/hasSymbol" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnSavePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#2D3142"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/save_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnViewHistory"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutResult" />

    <Button
        android:id="@+id/btnViewHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#2D3142"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/view_history"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSavePassword"
        app:layout_constraintTop_toTopOf="@+id/btnSavePassword" />

</androidx.constraintlayout.widget.ConstraintLayout>